fixed h1 media alignment

--- a/css/style-media.css
+++ b/css/style-media.css
@@ -38,7 +38,7 @@ nav li a:hover {
 
 header h1{
   font-size: 3em;
-  top:50%;
+  top:60%;
 }
 
 h2{
